[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mon-utils"
version = "0.1.0"
description = "Mes outils Python réutilisables"
authors = [{name = "Philippe Jeremy"}]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["utilitaires_package*"]