[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pj-utils"
version = "0.1.1"
description = "Mes outils Python réutilisables"
authors = [{name = "Philippe Jeremy"}]
requires-python = ">=3.10"

dependencies = [
    "sqlalchemy",
    "pymysql",
    "psycopg2-binary",
    "pyodbc"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["utilitaires_package*"]